<resources>
    <string name="app_name">Speech Note</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="make_note">Create a new Note</string>


    <!--permission-->
    <string name="permisstion">You can not use this feature without requested permission</string>
    <string name="request_permission">You can not use an app features without authorization</string>
    <string name="grant_permission">Grant permission</string>
    <string name="close">Close</string>

    <string name="action_setting">Settings</string>
    <string name="app_empty">.....</string>
    <string name="exit_app">Do you want to exit app?</string>
    <string name="search">Search</string>
    <string name="main_setting">Settings</string>
    <string name="main_remove_ads">Remove Ads</string>
    <string name="action_search">Search</string>
    <string name="click_back_again">Please click BACK again to exit</string>
    <string name="purchase_cancel">You have declined payment</string>
    <string name="billing_not_initialized">Billing not initialized.</string>
    <string name="thank_you_purchased">Thank you for your purchase!</string>
    <string name="check_connect_internet">Check internet connection</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="app_accept">Accept</string>
    <string name="loading_data">Loading data</string>
    <string name="app_yes">Yes</string>
    <string name="app_no">No</string>
    <string name="app_cancel">Cancel</string>
    <string name="app_ok">OK</string>
    <string name="app_success">Successfull</string>
    <string name="free">Free</string>
    <string name="five_stars">5.0 &#9733;</string>
    <!--<string name="splash_title">SkyFall Team</string>-->
    <string name="splash_loading">Loading ads...</string>
    <string name="main_discovery">Discovery (Ads)</string>
    <string name="main_rate_us">Rate us</string>
    <string name="main_feedback">Feedback</string>
    <string name="main_policy">Policy</string>
    <string name="main_share">Share app</string>
    <string name="app_rate_app_1">Thank you for using our free application</string>
    <string name="app_rate_app_2">Let us know your satisfaction</string>
    <string name="quit_confirm">Do you really want to quit ?</string>
    <string name="recent_note">Recent Notes</string>
    <string name="good_bye">You are leaving....\nGoodbye!</string>
    <string name="welcome_title_splsh">Welcome!</string>

    <!--a-ad-->
    <string name="INTERSTITIAL_A_AD" translatable="false">6499/example/interstitial</string>
    <string name="NATIVE_LARGE_A_AD" translatable="false"></string>
    <string name="NATIVE_SMALL_A_AD" translatable="false"></string>
    <string name="VIDEO_A_AD" translatable="false"></string>
    <!--m-ad-->
    <string name="INTERSTITIAL_M_AD" translatable="false"></string>
    <string name="NATIVE_LARGE_M_AD" translatable="false"></string>
    <string name="VIDEO_M_AD" translatable="false"></string>
    <!--g-ad-->
    <string name="INTERSTITIAL_G_AD" translatable="false"></string>
    <string name="NATIVE_LARGE_G_AD" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="VIDEO_G_AD" translatable="false"></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_note_confirm">Are you sure you want to delete this note</string>
    <string name="add_new_notebook">Add a new Notebook:</string>
    <string name="confirm">Confirm</string>
    <string name="filename_empty">Notebook\'s name  is empty</string>
    <string name="noti_message">Touch to see more detail</string>
    <string name="set_reminder_option">Reminder settings</string>
    <string name="repeate">Repeate every day</string>
    <string name="vibrate">Vibrate</string>
    <string name="ringtone">Ringtone</string>
    <string name="note_content">Speak or write your note here</string>
    <string name="action_filter">Filter</string>
    <string name="pio_normal">Normal</string>
    <string name="important">Important</string>
    <string name="pio_todo">To do</string>
    <string name="pio_inspiration">Inspiration</string>
    <string name="pio_all">All</string>
    <string name="choose_Note_Book">Choose your Notebook</string>
    <string name="untitled_note">Untitled Note</string>
    <string name="widget_emty_string">Tap title bar to create a new Note.</string>
    <string name="voicenote">Add voice note</string>
    <string name="textnote">Add text note</string>
    <string name="todolist">Add todolist</string>
    <string name="reminder">Add reminder</string>
    <string name="category">Add category</string>
    <string name="todolisthint">My tasks </string>
    <string name="save_and_add_reminder">Save and add Reminder</string>
    <string name="tap_back_two_time">Tap back button again to exit</string>
    <string name="title_hello">Hi user!</string>
    <string name="title_tip">With pleasure we provide\nyou an powerful application\nto manage your life effectively</string>
    <string name="tipbtn">How to use</string>
    <string name="intruction">Instruction</string>
    <string name="choose_language_input">Voice input</string>
    <string name="dlg_language_input">Choose language input</string>
    <string name="save">Save</string>
    <string name="no_note_list_note_frg">Tap \"+\" button and create a new Note</string>
    <string name="no_note_reminder_frg">Tap the button below and \nwe will make a simple Reminder for you</string>
    <string name="no_notebook_frg">Tap the button below \nand make a Notebook \nto manage your notes effectively</string>
    <string name="no_note_in_notebook">Tap \"+\" button to make note \nfor this notebook</string>
    <string name="speak_dialog">Speak when this dialog appears!</string>
    <string name="saved">Saved</string>
    <string name="app_install_requirement">Make sure you have installed google app, google launcher and enable google voice input to use Voice to Text feature</string>
    <string name="speech_setting">Speech setting</string>

    <string name="BASE_URL">https://alarm-speak-note-quan.herokuapp.com</string>

</resources>
