<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.CategoryDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:id="@+id/cardtb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:theme="@style/MyToolbarStyle" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:animateLayoutChanges="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/category_spiner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"></Spinner>

                    <ImageView
                        android:id="@+id/closefilter"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:padding="8dp"
                        android:src="@drawable/close_clicked" />
                </LinearLayout>


            </LinearLayout>


        </android.support.v7.widget.CardView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="12dp"
                    android:visibility="visible">

                    <LinearLayout
                        android:id="@+id/banner_no_note"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/tab_empty"/>

                        <TextView
                            android:layout_marginTop="15dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no_note_in_notebook"
                            android:textAlignment="center"
                            android:textColor="@color/textsub" />
                    </LinearLayout>

                    <android.support.v4.widget.NestedScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/banner_note"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">


                            <android.support.v7.widget.RecyclerView
                                android:id="@+id/list_note"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:paddingBottom="50dp">

                            </android.support.v7.widget.RecyclerView>
                        </LinearLayout>
                    </android.support.v4.widget.NestedScrollView>
                </android.support.v7.widget.CardView>
            </LinearLayout>



        </FrameLayout>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_1"
        android:clickable="true"
        android:orientation="vertical"
        android:visibility="gone">

    </LinearLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/add"
        app:menu_colorNormal="@color/blue"
        app:menu_colorPressed="@color/colorPrimaryDark"
        app:menu_colorRipple="@color/colorAccent"
        app:menu_fab_hide_animation="@anim/hide_to_bottom"
        app:menu_fab_show_animation="@anim/show_from_bottom"
        app:menu_labels_hideAnimation="@anim/hide_to_bottom"
        app:menu_labels_showAnimation="@anim/show_from_bottom"
        app:menu_labels_colorNormal="@color/blue"
        app:menu_labels_colorPressed="@color/colorPrimaryDark"
        app:menu_labels_colorRipple="@color/colorAccent"
        app:menu_labels_cornerRadius="3dp"
        app:menu_labels_textColor="@color/white"
        app:menu_showShadow="true">


        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_voicenote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/add_voicenote"
            app:fab_colorNormal="@color/blue"
            app:fab_colorPressed="@color/colorPrimaryDark"
            app:fab_colorRipple="@color/colorAccent"
            app:fab_label="@string/voicenote"
            app:fab_hideAnimation="@anim/hide_to_bottom"
            app:fab_showAnimation="@anim/show_from_bottom"
            app:fab_size="normal" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_textnote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/add_textnote"
            app:fab_colorNormal="@color/blue"
            app:fab_hideAnimation="@anim/hide_to_bottom"
            app:fab_showAnimation="@anim/show_from_bottom"
            app:fab_label="@string/textnote"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_todolist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/add_checklist"
            app:fab_hideAnimation="@anim/hide_to_bottom"
            app:fab_showAnimation="@anim/show_from_bottom"
            app:fab_colorNormal="@color/blue"
            app:fab_colorPressed="@color/colorPrimaryDark"
            app:fab_colorRipple="@color/colorAccent"
            app:fab_label="@string/todolist"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            app:fab_hideAnimation="@anim/hide_to_bottom"
            app:fab_showAnimation="@anim/show_from_bottom"
            android:src="@drawable/add_reminder"
            app:fab_colorNormal="@color/blue"
            app:fab_colorPressed="@color/colorPrimaryDark"
            app:fab_colorRipple="@color/colorAccent"
            app:fab_label="@string/reminder"
            app:fab_size="mini" />


    </com.github.clans.fab.FloatingActionMenu>

</RelativeLayout>